--- a/po/cs.po
+++ b/po/cs.po
@@ -2017,10 +2017,9 @@ msgid "SQL Validator is disabled"
 msgstr "Ověřování SQL je vypnuté"
 
 #: libraries/config/FormDisplay.class.php:765
-#, fuzzy
 #| msgid "PHP extension to use"
 msgid "SOAP extension not found"
-msgstr "Použít rozšíření PHP"
+msgstr "Rozšíření SOAP nebylo nalezeno"
 
 #: libraries/config/FormDisplay.class.php:773
 #, fuzzy, php-format
