--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:21+0200\n"
-"PO-Revision-Date: 2010-08-23 11:27+0200\n"
+"PO-Revision-Date: 2010-08-23 11:33+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5419,6 +5419,8 @@ msgstr "Peržiūrėti struktūros turinį paspaudžiant ant vardo"
 msgid ""
 "Change any of its settings by clicking the corresponding \"Options\" link"
 msgstr ""
+"Keisti bet kuriuos iš šių nustatymų spauskite atitinkamą „Nustatymai“ "
+"nuorodą"
 
 #: libraries/import.lib.php:1113
 msgid "Edit its structure by following the \"Structure\" link"
