--- a/po/lt.po
+++ b/po/lt.po
@@ -1739,7 +1739,7 @@ msgstr ""
 #: libraries/common.inc.php:613
 #, php-format
 msgid "Invalid server index: %s"
-msgstr "Blogas serverio žurnalas: %s"
+msgstr "Blogas serverio indeksas: %s"
 
 #: libraries/common.inc.php:620
 #, php-format
