--- a/po/cs.po
+++ b/po/cs.po
@@ -2536,10 +2536,9 @@ msgstr "Přizpůsobí režim prohlížení"
 #: libraries/config/messages.inc.php:171 libraries/config/messages.inc.php:182
 #: libraries/config/messages.inc.php:184 libraries/config/messages.inc.php:212
 #: libraries/config/messages.inc.php:224
-#, fuzzy
 #| msgid "Customize default export options"
 msgid "Customize default options"
-msgstr "Přizpůsobí výchozí nastavení exportu"
+msgstr "Přizpůsobí výchozí nastavení"
 
 #: libraries/config/messages.inc.php:153 libraries/config/setup.forms.php:230
 #: libraries/config/setup.forms.php:304
