Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:21+0200\n"
-"PO-Revision-Date: 2010-08-23 11:37+0200\n"
+"PO-Revision-Date: 2010-08-23 11:39+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6163,9 +6163,8 @@ msgid "Settings"
 msgstr "nustatymai"
 
 #: libraries/server_synchronize.lib.php:1337 server_synchronize.php:1108
-#, fuzzy
 msgid "Source database"
-msgstr "Eiti į duomenų bazę"
+msgstr "Iš duombazės"
 
 #: libraries/server_synchronize.lib.php:1339
 #: libraries/server_synchronize.lib.php:1362
