Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:21+0200\n"
-"PO-Revision-Date: 2010-08-23 11:43+0200\n"
+"PO-Revision-Date: 2010-08-23 12:01+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5006,7 +5006,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:42
 msgid "Transaction buffer size"
-msgstr ""
+msgstr "Operacijų (Transaction) buferio dydis"
 
 #: libraries/engines/pbxt.lib.php:43
 msgid ""
