Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:21+0200\n"
-"PO-Revision-Date: 2010-08-23 12:01+0200\n"
+"PO-Revision-Date: 2010-08-23 12:02+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5013,6 +5013,8 @@ msgid ""
 "The size of the global transaction log buffer (the engine allocates 2 "
 "buffers of this size). The default is 1MB."
 msgstr ""
+"Visuotino operacijų žurnalo buferio dydis (variklis paskiria 2 buferius "
+"tokio dydžio). Numatyta reikšmė yra 1 MB."
 
 #: libraries/engines/pbxt.lib.php:47
 msgid "Checkpoint frequency"
