--- a/po/ug.po
+++ b/po/ug.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:27+0200\n"
+"POT-Creation-Date: 2010-08-23 13:31+0200\n"
 "PO-Revision-Date: 2010-07-30 11:41+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
@@ -6591,7 +6591,7 @@ msgid "Do you want to import remaining settings?"
 msgstr ""
 
 #: prefs_manage.php:225 prefs_manage.php:251
-msgid "Saved on: __DATE__"
+msgid "Saved on: @DATE@"
 msgstr ""
 
 #: prefs_manage.php:239
