--- a/po/lt.po
+++ b/po/lt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 13:31+0200\n"
 "PO-Revision-Date: 2010-08-23 12:05+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
@@ -11,8 +11,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
@@ -5423,8 +5423,7 @@ msgstr "Peržiūrėti struktūros turinį paspaudžiant ant vardo"
 msgid ""
 "Change any of its settings by clicking the corresponding \"Options\" link"
 msgstr ""
-"Keisti bet kuriuos iš šių nustatymų spauskite atitinkamą „Nustatymai“ "
-"nuorodą"
+"Keisti bet kuriuos iš šių nustatymų spauskite atitinkamą „Nustatymai“ nuorodą"
 
 #: libraries/import.lib.php:1113
 msgid "Edit its structure by following the \"Structure\" link"
@@ -6943,7 +6942,7 @@ msgid "Do you want to import remaining settings?"
 msgstr ""
 
 #: prefs_manage.php:225 prefs_manage.php:251
-msgid "Saved on: __DATE__"
+msgid "Saved on: @DATE@"
 msgstr ""
 
 #: prefs_manage.php:239
