Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-22 20:26+0200\n"
+"PO-Revision-Date: 2010-08-23 19:58+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1055,7 +1055,7 @@ msgstr "Üret"
 
 #: js/messages.php:70
 msgid "More"
-msgstr ""
+msgstr "Daha Fazla"
 
 #. l10n: Display text for calendar close link
 #: js/messages.php:80
