--- a/po/tr.po
+++ b/po/tr.po
@@ -1947,7 +1947,7 @@ msgstr "yukarıdakinin ikisi birden"
 
 #: libraries/config.values.php:122
 msgid "neither of the above"
-msgstr ""
+msgstr "yukarıdakinin hiçbiri"
 
 #: libraries/config/FormDisplay.class.php:83
 #: libraries/config/validate.lib.php:416
