Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 20:03+0200\n"
+"PO-Revision-Date: 2010-08-23 20:04+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2006,7 +2006,7 @@ msgstr "dışa aktarma çalışmayacak, eksik işlev (%s)"
 
 #: libraries/config/FormDisplay.class.php:758
 msgid "SQL Validator is disabled"
-msgstr ""
+msgstr "SQL Onaylayıcı etkisizleştirildi"
 
 #: libraries/config/FormDisplay.class.php:765
 #, fuzzy
