--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 20:05+0200\n"
+"PO-Revision-Date: 2010-08-23 20:27+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2069,6 +2069,9 @@ msgid ""
 "inside a frame, and is a potential [strong]security hole[/strong] allowing "
 "cross-frame scripting attacks"
 msgstr ""
+"Bunu etkinleştirmek phpMyAdmin'i çerçeve içinde çağırmak için farklı alan "
+"isimlerine yerleşmiş sayfalara izin verir ve çapraz çerçeve betik yazım "
+"saldırılarına izin veren olası [strong]güvenlik açığıdır[/strong]"
 
 #: libraries/config/messages.inc.php:20
 msgid "Allow third party framing"
