Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2196,7 +2196,7 @@ msgstr "PHP Hata Ayıklama"
 
 #: libraries/config/messages.inc.php:44
 msgid "Debug SQL"
-msgstr ""
+msgstr "SQL Hata Ayıklama"
 
 #: libraries/config/messages.inc.php:45
 #, fuzzy
