--- a/po/tr.po
+++ b/po/tr.po
@@ -2566,7 +2566,7 @@ msgstr "CSV"
 
 #: libraries/config/messages.inc.php:155
 msgid "Developer"
-msgstr ""
+msgstr "Geliştirici"
 
 #: libraries/config/messages.inc.php:156
 msgid "Settings for phpMyAdmin developers"
