--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 20:41+0200\n"
+"PO-Revision-Date: 2010-08-23 20:43+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6539,8 +6539,9 @@ msgid ""
 "Displays hexadecimal representation of data. Optional first parameter "
 "specifies how often space will be added (defaults to 2 nibbles)."
 msgstr ""
-"Verinin onaltılık gösterimini görüntüler. İsteğe bağlı ilk parametre, ne "
-"sıklıkta boşluk ekleneceğini belirler (varsayılanı 2 yarım bayttır)."
+"Verinin onaltılık düzende gösterimini görüntüler. İsteğe bağlı ilk "
+"parametre, ne sıklıkta boşluk ekleneceğini belirler (varsayılanı 2 yarım "
+"bayttır)."
 
 #: libraries/transformations/image_jpeg__inline.inc.php:9
 #: libraries/transformations/image_png__inline.inc.php:9
