--- a/po/tr.po
+++ b/po/tr.po
@@ -2666,7 +2666,7 @@ msgstr "Ana çerçeve"
 
 #: libraries/config/messages.inc.php:181
 msgid "Microsoft Office"
-msgstr ""
+msgstr "Microsoft Office"
 
 #: libraries/config/messages.inc.php:183
 #, fuzzy
