Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 20:56+0200\n"
+"PO-Revision-Date: 2010-08-23 20:57+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2694,9 +2694,9 @@ msgid ""
 "html#cfg_TitleTable]documentation[/a] for magic strings that can be used to "
 "get special values."
 msgstr ""
-"Tarayıcının başlık çubuğu metnini belirle. Özel değerleri almak için "
-"kullanılabilecek siğirli dizgiler için  "
-"[a@Documentation.html#cfg_TitleTable]belgelere[/a] bakınız."
+"Tarayıcının başlık çubuğu metnini belirler. Özel değerleri almak için "
+"kullanılabilecek sihirli dizgiler için  "
+"[a@Documentation.html#cfg_TitleTable]belgelerden[/a] yararlanın."
 
 #: libraries/config/messages.inc.php:189
 #: libraries/navigation_header.inc.php:83
