--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 22:03+0200\n"
+"PO-Revision-Date: 2010-08-23 22:04+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1929,10 +1929,9 @@ msgid "Custom - like above, but without the quick/custom choice"
 msgstr "Özel - yukarıdaki gibi ancak hızlı/özel seçimsiz"
 
 #: libraries/config.values.php:119
-#, fuzzy
 #| msgid "Delayed inserts"
 msgid "complete inserts"
-msgstr "Gecikmiş eklemeler"
+msgstr "tam eklemeler"
 
 #: libraries/config.values.php:120
 #, fuzzy
