--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 22:07+0200\n"
+"PO-Revision-Date: 2010-08-23 22:08+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2264,10 +2264,9 @@ msgid "Edit SQL queries in popup window"
 msgstr "Açılır pencere içinde SQL sorgularını düzenle"
 
 #: libraries/config/messages.inc.php:61
-#, fuzzy
 #| msgid "Edit next row"
 msgid "Edit in window"
-msgstr "Sonraki satırı düzenle"
+msgstr "Pencerede düzenle"
 
 #: libraries/config/messages.inc.php:62
 #, fuzzy
